--- a/css/estilosAdministrador.css
+++ b/css/estilosAdministrador.css
@@ -74,6 +74,16 @@
     }
     /*ESTILOS ORO - PLATA - BRONCE*/
     
+    .dropdown-container ul button {
+        background: none;
+        border: none;
+        color: #F2D022;
+    }
+    
+    .dropdown-container ul button:hover {
+        background: #695a10;
+    }
+    
     .dropdown-container ul li {
         float: left;
         margin-top: 10px;
@@ -95,4 +105,43 @@
     iframe {
         width: 100%;
         height: 666px;
+    }
+    
+    .datos {
+        height: 666px;
+        background: #F2D5BB;
+    }
+    /*MODAL*/
+    
+    .contenedor-modal {
+        position: absolute;
+        margin-left: 600px;
+    }
+    
+    .card {
+        width: 400px;
+        height: 420px;
+        font-size: 18px;
+    }
+    
+    .card h1 {
+        margin-top: 0px;
+        font-size: 25px;
+    }
+    
+    .card-image {
+        margin-top: 50px;
+        height: 200px;
+        width: 50%;
+        padding-top: 22px;
+    }
+    
+    .card-image img {
+        margin-left: 100px;
+        height: 150px;
+    }
+    
+    .card-content {
+        margin-top: 0px;
+        justify-content: center;
     }
